--- a/public/index.html
+++ b/public/index.html
@@ -1,102 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="stylesheets/style.css">
-    <script type="module" src="javascript/index.js"></script>
-  <title>IH Characters</title>
-</head>
-<body>
-  <section class="container">
-    <h1>Ironhack Characters API</h1>
-    <div class="characters-container">
-      <div class="character-info">
-        <div class="character-id">Character Id</div>
-        <div class="name">Character Name</div>
-        <div class="occupation">Character Occupation</div>
-        <div class="cartoon">Is a Cartoon?</div>
-        <div class="weapon">Character Weapon</div>
-      </div>
-
-      <template id="template">
-        <div class="character-info">
-          <div class="character-id">Character Id</div>
-          <div class="name">Character Name</div>
-          <div class="occupation">Character Occupation</div>
-          <div class="cartoon">Is a Cartoon?</div>
-          <div class="weapon">Character Weapon</div>
-        </div>
-      </template>
-    </div>
-    <section class="operations">
-      <div class="operation">
-        <button id="fetch-all">Fetch all</button>
-      </div>
-      <div class="operation">
-        <label for="character-id">Search by name: </label>
-        <input type="text" name="character-name">
-        <button id="fetch-one">Fetch one</button>
-      </div>
-      <div class="operation delete">
-        <label for="character-id-delete">Delete by ID: </label>
-        <input type="text" name="character-id-delete">
-        <button id="delete-one">Delete one</button>
-      </div>
-
-    </section>
-  </section>
-  <section class="container">
-    <section class="form-container">
-      <h2>New Character</h2>
-      <form id="new-character-form" class="character-form">
-        <div class="field">
-          <label for="name">Name: </label>
-          <input type="text" name="name">
-        </div>
-        <div class="field">
-          <label for="occupation">Occupation: </label>
-          <input type="text" name="occupation">
-        </div>
-        <div class="field">
-          <label for="weapon">Weapon: </label>
-          <input type="text" name="weapon">
-        </div>
-        <div class="field">
-          <label for="cartoon">Is a Cartoon: </label>
-          <input name="cartoon" type="checkbox">
-        </div>
-        <button id="send-data">Create</button>
-      </form>
-    </section>
-    <section class="form-container">
-      <h2>Edit Character</h2>
-      <form id="edit-character-form" class="character-form">
-        <div class="field">
-          <label for="id">ID: </label>
-          <input type="text" name="chr-id">
-        </div>
-        <div class="field">
-          <label for="name">Name: </label>
-          <input type="text" name="name">
-        </div>
-        <div class="field">
-          <label for="occupation">Occupation: </label>
-          <input type="text" name="occupation">
-        </div>
-        <div class="field">
-          <label for="weapon">Weapon: </label>
-          <input type="text" name="weapon">
-        </div>
-        <div class="field">
-          <label for="cartoon">Is a Cartoon: </label>
-          <input name="cartoon" type="checkbox">
-        </div>
-        <button id="send-data">Update</button>
-      </form>
-    </section>
-  </section>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+		<link rel="stylesheet" href="stylesheets/style.css" />
+		<script type="module" src="javascript/index.js"></script>
+		<title>IH Characters</title>
+	</head>
+	<body>
+		<section class="container">
+			<h1>Ironhack Characters API</h1>
+			<div class="characters-container">
+				<div class="character-info">
+					<div class="character-id">Character Id</div>
+					<div class="name">Character Name</div>
+					<div class="occupation">Character Occupation</div>
+					<div class="cartoon">Is a Cartoon?</div>
+					<div class="weapon">Character Weapon</div>
+				</div>
+			</div>
+			<section class="operations">
+				<div class="operation">
+					<button id="fetch-all">Fetch all</button>
+				</div>
+				<div class="operation">
+					<label for="character-id">Search by name: </label>
+					<input type="text" name="character-name" />
+					<button id="fetch-one">Fetch one</button>
+				</div>
+				<div class="operation delete">
+					<label for="character-id-delete">Delete by ID: </label>
+					<input type="text" name="character-id-delete" />
+					<button id="delete-one">Delete one</button>
+				</div>
+			</section>
+		</section>
+		<section class="container">
+			<section class="form-container">
+				<h2>New Character</h2>
+				<form id="new-character-form" class="character-form">
+					<div class="field">
+						<label for="name">Name: </label>
+						<input type="text" name="name" />
+					</div>
+					<div class="field">
+						<label for="occupation">Occupation: </label>
+						<input type="text" name="occupation" />
+					</div>
+					<div class="field">
+						<label for="weapon">Weapon: </label>
+						<input type="text" name="weapon" />
+					</div>
+					<div class="field">
+						<label for="cartoon">Is a Cartoon: </label>
+						<input name="cartoon" type="checkbox" />
+					</div>
+					<button id="send-data">Create</button>
+				</form>
+			</section>
+			<section class="form-container">
+				<h2>Edit Character</h2>
+				<form id="edit-character-form" class="character-form">
+					<div class="field">
+						<label for="id">ID: </label>
+						<input type="text" name="chr-id" />
+					</div>
+					<div class="field">
+						<label for="name">Name: </label>
+						<input type="text" name="name" />
+					</div>
+					<div class="field">
+						<label for="occupation">Occupation: </label>
+						<input type="text" name="occupation" />
+					</div>
+					<div class="field">
+						<label for="weapon">Weapon: </label>
+						<input type="text" name="weapon" />
+					</div>
+					<div class="field">
+						<label for="cartoon">Is a Cartoon: </label>
+						<input name="cartoon" type="checkbox" />
+					</div>
+					<button id="send-data">Update</button>
+				</form>
+			</section>
+		</section>
+		<!-- Template to create characters -->
+		<template id="template">
+			<div class="character-info">
+				<div class="character-id">Id: <span></span></div>
+				<div class="name">Name: <span></span></div>
+				<div class="occupation">Occupation: <span></span></div>
+				<div class="cartoon">Cartoon: <span></span></div>
+				<div class="weapon">Weapon: <span></span></div>
+			</div>
+		</template>
+	</body>
 </html>
